<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">タチコン</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Sliding Menu items -->
    <string-array name="nav_drawer_items">
        <item>会話集</item>
        <item>タグ</item>
        <item>お気に入り</item>
        <item>ヒストリー</item>
        <item>私の文書</item>
        <item>作った人</item>
    </string-array>

    <!-- Sliding Menu item icons -->
    <array name="nav_drawer_icons">
        <item>@mipmap/ic_action_home</item>
        <item>@mipmap/ic_action_tag</item>
        <item>@mipmap/ic_action_favorite</item>
        <item>@mipmap/ic_action_history</item>
        <item>@mipmap/ic_action_mysentences</item>
        <item>@mipmap/ic_about_us</item>
    </array>

    <string name="title_activity_conversation">会話集</string>
    <string name="title_activity_search">検察</string>
    <string name="title_activity_tag">タグ</string>
    <string name="title_activity_favorite">お気に入り</string>
    <string name="title_activity_history">ヒストリー</string>
    <string name="title_activity_interpreter">通訳</string>
    <string name="title_activity_mysentences">私の文書</string>

    <string name="title_activity_conversation_sub">会話</string>
    <string name="title_activity_sub">サブカテゴリー</string>
    <string name="title_activity_display">会話文</string>
    <string name="title_activity_popup">サブカテゴリー</string>
    <string name="PopUp_title">ベトナム語に訳す</string>
    <string name="title_activity_add_edit_tag">タグを変更</string>

    <string name="title_activity_add_new_my_sentences"></string>
    <string name="record">レコーダー</string>
    <string name="tag">タグ</string>
    <string name="vietnamese">ベトナムー語</string>
    <string name="japanese">日本語</string>
    <string name="photo">写真</string>
    <string name="Add_Tag">加算</string>
    <string name="title_activity_add_tag_my_sentences">AddTagMySentencesActivity</string>
    <string name="title_activity_record">レコーダー</string>
    <string name="taglist_itemsentences">会話文</string>

    <string name="search_hint_tag">タグ名</string>
    <string name="search_hint">検察</string>
    <string name="title_activity_pop_up_my_sen">ベトナム語に訳す</string>
    <string name="record_max_time">00:05</string>
    <string name="audio_name_hint">オーディオ名</string>

    <string name="API_KEY_RELEASE">AIzaSyBDDTZU_-aJn2VwU-cXmvaiQ3mfjG0qzmI</string>
    <string name="API_KEY_DEBUG">AIzaSyDbowaeYSKpVfjMxQ6QOdX7viKymKnqZic</string>
    <string name="title_activity_location">LocationActivity</string>
</resources>
