<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.demoapp.activity.AddEditMySentencesActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar"
        android:background="#f9f5ec">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/japanese"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_addmysentences"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/japanese"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/ed_japanese"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/vietnamese"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_addmysentences"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vietnamese"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/ed_vietnamese"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tag"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_addmysentences"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/bt_addTagMySentences"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:background="@drawable/state_btn_radi_tl_bl"
                        android:src="@mipmap/ic_action_add"
                        android:layout_margin="5dp"/>

                    <com.example.tony.taglibrary.TagView
                        android:id="@+id/tagView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        app:tagMargin="3dp"
                        app:textPaddingBottom="3dp"
                        app:textPaddingLeft="10dp"
                        app:textPaddingRight="10dp"
                        app:textPaddingTop="3dp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/record"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_addmysentences"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/record"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/bt_record"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/state_btn_radi_none"
                        android:src="@mipmap/ic_addmysen_record" />

                    <ImageButton
                        android:id="@+id/bt_recordPath"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/state_btn_radi_none"
                        android:src="@mipmap/ic_addmysen_recordpath" />
                    <ImageButton
                        android:id="@+id/bt_recordPlay"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/state_btn_radi_none"
                        android:src="@mipmap/ic_addmysen_play" />

                    <ImageButton
                        android:id="@+id/bt_recordDelete"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/state_btn_radi_none"
                        android:src="@mipmap/ic_addmysen_delete" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/photo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_addmysentences"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/bt_takephoto"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/state_btn_radi_none"
                        android:src="@mipmap/ic_addmysen_camera" />

                    <ImageButton
                        android:id="@+id/bt_gallery"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/state_btn_radi_none"
                        android:src="@mipmap/ic_addmysen_gallery" />

                    <ImageButton
                        android:id="@+id/bt_photodelete"
                        android:layout_width="65dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/state_btn_radi_none"
                        android:src="@mipmap/ic_addmysen_delete" />

                </LinearLayout>
                <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/default_image"
                    android:adjustViewBounds="true"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="#f9f5ec"/>
        </LinearLayout>

    </ScrollView>

    //Footer button
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/bt_cancel2"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/state_btn_footer"
            android:src="@mipmap/ic_action_cancel"
            android:gravity="center"
            android:padding="1dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:weightSum="10">
            <View
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>
            <View
                android:layout_weight="8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#FFFFFF" />
            <View
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/bt_accept2"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/state_btn_footer"
            android:src="@mipmap/ic_action_accept"
            android:gravity="center"
            android:padding="1dp"/>
    </LinearLayout>

</RelativeLayout>




